fixed issue with header image on Firefox not displaying correctly.
Now explicitly specifying the left and right values for the image-container

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -125,7 +125,9 @@
     background-position: center center
     background-size: cover
     bottom: 0
+    left: 0
     position: absolute
+    right: 0
     top: 0
 
     &:after
